[tool.poetry]
name = "gitlab-lint"
version = "0.4.0"
description = "This is a CLI application to quickly lint .gitlab-ci.yml files using the gitlab api"
authors = ["Elijah Roberts <elijah@elijahjamesroberts.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
