[tool.poetry]
name = "gitlab-lint"
version = "0.7.1"
description = "This is a CLI application to quickly lint .gitlab-ci.yml files using the gitlab api"
authors = ["Elijah Roberts <elijah@elijahjamesroberts.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/elijah-roberts/gitlab-lint"
repository = "https://github.com/elijah-roberts/gitlab-lint"
keywords = ["gitlab", "lint"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
]
include = [
    "LICENSE",
]
packages = [
    { include = "gitlab_lint", from = "src" },
]
[tool.poetry.scripts]
gll = "gitlab_lint.gll:gll"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"
fqdn = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"
bandit = "^1.7.4"
safety = "^2.0.0"
commitizen = "^2.32.2"

[tool.poetry.group.dev.dependencies]
poetry = "^1.2.1"
poetryup = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "0.7.1"
version_files = [
    "pyproject.toml:version",
    "src/gitlab_lint/__init__.py:__version__"
]
